--- a/style.css
+++ b/style.css
@@ -103,10 +103,39 @@ body {
 
 .project_container img {
 	max-width: 1000px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	transition: .3s ease;
 }
 
 .project_container img:hover {
 	transform: scale(1.08, 1.08);
 	transition: .3s ease;
+}
+
+/*-------- Responsive --------*/
+
+@media screen and (max-width: 1000px) {
+	.project_container img {
+		max-width: 740px;
+	}
+}
+
+@media screen and (max-width: 740px) {
+	.project_container img {
+		max-width: 600px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.project_container img {
+		max-width: 475px;
+	}
+}
+
+@media screen and (max-width: 475px) {
+	.project_container img {
+		max-width: 375px;
+	}
 }
