--- a/project_style.css
+++ b/project_style.css
@@ -139,6 +139,38 @@ body {
 	font-weight: bold;
 }
 
+.intro_container a {
+	display: inline-block;
+	text-decoration: none;
+	position: relative;
+	-webkit-transition: all 0.4s ease;
+	transition: all 0.4s ease;
+}
+
+.intro_container a:after {
+	content: "";
+	position: absolute;
+	height: 2px;
+	background-color: var(--normalBlue) !important;
+	width: 0;
+	left: 50%;
+	bottom: 0;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	transform: translateX(-50%);
+	-webkit-transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55)
+		all;
+	transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
+}
+
+.intro_container a:hover {
+	color: var(--normalBlue) !important;
+}
+
+.intro_container a:hover:after {
+	width: 100%;
+}
+
 .hero_image {
 	max-width: 1000px;
 	display: block;
@@ -270,6 +302,10 @@ li {
 	max-width: 1000px;
 }
 
+.teppanyaki_highFid {
+	margin-bottom: 60px;
+}
+
 .prototype_video {
 	margin-top: 80px;
 	width: 900px;
@@ -292,6 +328,12 @@ li {
 
 .design_image {
 	max-width: 1000px;
+}
+
+/*-------- Development --------*/
+
+.development_paragraph {
+	margin-top: 160px;
 }
 
 /*-------- Responsive --------*/
